<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android" xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="5dp"
    card_view:cardElevation="2dp">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingBottom="20dp">

        <ImageView
            android:id="@+id/exploreItemImageView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:src="@drawable/placeholder"
            android:scaleType="fitStart"
            android:adjustViewBounds="true"
            android:contentDescription="@null"/>

        <TextView
            android:id="@+id/topDescriptionTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/exploreItemImageView"
            android:layout_centerHorizontal="true"
            android:text="@string/top_description_placeholder"
            android:textColor="@android:color/black"
            android:textSize="13sp"/>

        <TextView
            android:id="@+id/titleTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/topDescriptionTextView"
            android:layout_centerHorizontal="true"
            android:text="@string/title_placeholder"
            android:textColor="@android:color/black"
            android:textSize="17sp"
            android:textStyle="bold"/>

        <TextView
            android:id="@+id/promoMessageTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/titleTextView"
            android:layout_centerHorizontal="true"
            android:text="@string/promo_message_placeholder"
            android:textColor="@android:color/black"
            android:textSize="11sp"/>

        <TextView
            android:id="@+id/bottomDescriptionTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:layout_marginTop="5dp"
            android:layout_below="@+id/promoMessageTextView"
            android:gravity="center_horizontal"
            android:text="@string/bottom_description_placeholder" />

        <LinearLayout
            android:id="@+id/contentLinearLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:layout_below="@+id/bottomDescriptionTextView"
            android:orientation="vertical">

            <Button
                android:id="@+id/button1Button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:background="@drawable/button_shape_off"
                android:text="@string/button1_placeholder"
                android:textSize="15sp"/>

            <Button
                android:id="@+id/button2Button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:background="@drawable/button_shape_off"
                android:text="@string/button2_placeholder"
                android:textSize="15sp"/>

        </LinearLayout>

    </RelativeLayout>

</android.support.v7.widget.CardView>